--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -42,7 +42,7 @@
                                 <Font name="Arial Black" size="20.0" />
                             </font>
                         </Label>
-                        <Button fx:id="billing_btn" layoutX="39.0" layoutY="310.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="TEMPLATES" textFill="WHITE">
+                        <Button fx:id="template_btn" layoutX="39.0" layoutY="310.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="TEMPLATES" textFill="WHITE">
                             <font>
                                 <Font size="16.0" />
                             </font>
@@ -66,10 +66,11 @@
                                 <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="1.2em" />
                             </graphic>
                         </Button>
-                  <Label fx:id="lblVersao" alignment="CENTER" layoutX="7.0" layoutY="669.0" prefHeight="18.0" prefWidth="256.0" text="Versão: 1.0.0" textFill="WHITE">
-                     <font>
-                        <Font size="10.0" />
-                     </font></Label>
+                        <Label fx:id="lblVersao" alignment="CENTER" layoutX="7.0" layoutY="669.0" prefHeight="18.0" prefWidth="256.0" text="Versão: 1.0.0" textFill="WHITE">
+                            <font>
+                                <Font size="10.0" />
+                            </font>
+                        </Label>
                     </children>
                 </AnchorPane>
                 <AnchorPane layoutX="275.0" prefHeight="694.0" prefWidth="808.0">
@@ -215,121 +216,6 @@
                                 </Button>
                             </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="customer_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" visible="false">
-                            <children>
-                                <TableView fx:id="customer_table" layoutX="13.0" layoutY="159.0" onMouseClicked="#selectCustomerTableData" prefHeight="474.0" prefWidth="794.0" stylesheets="@dashboard.css">
-                                    <columns>
-                                        <TableColumn fx:id="cust_col_id" prefWidth="196.79998779296875" text="Id" />
-                                        <TableColumn fx:id="cust_col_name" prefWidth="307.20001220703125" text="Name" />
-                                        <TableColumn fx:id="cust_col_phone" prefWidth="288.00006103515625" text="Phone Number" />
-                                    </columns>
-                                </TableView>
-                                <Button fx:id="cust_btn_add" layoutX="736.0" layoutY="31.0" mnemonicParsing="false" onMouseClicked="#addCustomerData" prefHeight="32.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="PLUS_CIRCLE" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="cust_btn_edit" layoutX="679.0" layoutY="31.0" mnemonicParsing="false" onMouseClicked="#updateCustomerData" prefHeight="32.0" prefWidth="50.0" styleClass="refresh" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="EDIT" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="cust_btn_delete" layoutX="620.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#deleteCustomerData" prefHeight="32.0" prefWidth="50.0" styleClass="delete" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="MINUS_CIRCLE" size="18.0" wrappingWidth="13.485666275024414" />
-                                    </graphic>
-                                </Button>
-                                <TextField fx:id="customer_search" layoutX="14.0" layoutY="25.0" prefHeight="32.0" prefWidth="230.0" promptText="Search" styleClass="search-billing" stylesheets="@dashboard.css" />
-                                <FontAwesomeIconView glyphName="SEARCH" layoutX="21.0" layoutY="46.0" size="16" />
-                                <TextField fx:id="cust_field_name" layoutX="113.0" layoutY="94.0" prefHeight="32.0" prefWidth="206.0" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <TextField fx:id="cust_field_phone" layoutX="487.0" layoutY="93.0" prefHeight="32.0" prefWidth="200.0" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <Label layoutX="36.0" layoutY="94.0" prefHeight="32.0" prefWidth="65.0" text="Name :">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Label layoutX="361.0" layoutY="94.0" prefHeight="32.0" prefWidth="122.0" text="Phone Number :">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Button fx:id="cust_btn_print" layoutX="562.0" layoutY="32.0" mnemonicParsing="false" onAction="#printCustomersDetails" prefHeight="32.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fx:id="customer_print" fill="WHITE" glyphName="PRINT" size="18.0" />
-                                    </graphic>
-                                </Button>
-                            </children>
-                        </AnchorPane>
-                        <AnchorPane fx:id="sales_pane" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" visible="false">
-                            <children>
-                                <TableView fx:id="sales_table" layoutX="13.0" layoutY="74.0" onMouseClicked="#selectCustomerTableData" prefHeight="558.0" prefWidth="794.0" stylesheets="@dashboard.css">
-                                    <columns>
-                                        <TableColumn fx:id="sales_col_id" prefWidth="63.200042724609375" text="Id" />
-                                        <TableColumn fx:id="sales_col_inv_num" prefWidth="122.4000244140625" text="Invoice Number" />
-                                        <TableColumn fx:id="sales_col_item_num" prefWidth="93.60009765625" text="Item Number" />
-                                        <TableColumn fx:id="sales_col_cust_name" prefWidth="133.5999755859375" text="Customer Name" />
-                                        <TableColumn fx:id="sales_col_price" prefWidth="90.4000244140625" text="Price" />
-                                        <TableColumn fx:id="sales_col_quantity" prefWidth="64.0" text="Quantity" />
-                                        <TableColumn fx:id="sales_col_total_amount" prefWidth="117.60003662109375" text="Total Amount" />
-                                        <TableColumn fx:id="sales_col_date_of_sales" prefWidth="99.2000732421875" text="Date Of Sales" />
-                                    </columns>
-                                </TableView>
-                                <Button fx:id="sales_btn_edit" layoutX="687.0" layoutY="16.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="50.0" styleClass="refresh" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="EDIT" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="sales_btn_print" layoutX="745.0" layoutY="16.0" mnemonicParsing="false" onAction="#printSalesDetails" prefHeight="32.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fx:id="customer_print1" fill="WHITE" glyphName="PRINT" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Label layoutX="14.0" layoutY="16.0" prefHeight="47.0" prefWidth="206.0" text="Total Sales Amount :">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                                <Label fx:id="sales_total_amount" layoutX="180.0" layoutY="16.0" prefHeight="47.0" prefWidth="267.0">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </AnchorPane>
-                        <AnchorPane fx:id="purchase_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" visible="false">
-                            <children>
-                                <TableView fx:id="purchase_table" layoutX="13.0" layoutY="68.0" prefHeight="558.0" prefWidth="794.0" stylesheets="@dashboard.css">
-                                    <columns>
-                                        <TableColumn fx:id="purchase_col_id" prefWidth="69.60000610351562" text="Id" />
-                                        <TableColumn fx:id="purchase_col_invoice" prefWidth="161.5999755859375" text="invoice" />
-                                        <TableColumn fx:id="purchase_col_shop_details" prefWidth="163.20001220703125" text="Shop Details" />
-                                        <TableColumn fx:id="purchase_col_total_items" minWidth="0.0" prefWidth="136.0" text="Total Items" />
-                                        <TableColumn fx:id="purchase_col_total_amount" minWidth="0.0" prefWidth="136.0" text="Total Amount" />
-                                        <TableColumn fx:id="purchase_col_date_of_purchase" minWidth="0.0" prefWidth="125.59995117187498" text="Date Of Purchase" />
-                                    </columns>
-                                </TableView>
-                                <Button fx:id="purchase_btn_add" layoutX="744.0" layoutY="22.0" mnemonicParsing="false" onMouseClicked="#addCustomerData" prefHeight="32.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="PLUS_CIRCLE" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="purchase_btn_print" layoutX="687.0" layoutY="22.0" mnemonicParsing="false" onAction="#printPurchaseDetails" prefHeight="32.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="PRINT" size="18.0" />
-                                    </graphic>
-                                </Button>
-                                <Label layoutX="13.0" layoutY="14.0" prefHeight="47.0" prefWidth="206.0" text="Total Purchase Amount :">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                                <Label fx:id="purchase_total_amount" layoutX="230.0" layoutY="14.0" prefHeight="47.0" prefWidth="267.0">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </AnchorPane>
                         <AnchorPane fx:id="impressao_zpl" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" stylesheets="@dashboard.css" visible="true">
                             <children>
                                 <VBox alignment="TOP_LEFT" prefHeight="639.0" prefWidth="820.0" spacing="20.0">
@@ -349,8 +235,8 @@
                                             <ComboBox fx:id="comboSku" prefHeight="26.0" prefWidth="284.0" promptText="Selecione um SKU" />
                                         </children>
                                     </HBox>
-                           <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="780.0" spacing="20.0">
-                              <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="780.0" spacing="20.0">
+                                        <children>
 
                                             <!-- Quantidade -->
                                             <Label prefHeight="20.0" prefWidth="80.0" styleClass="label-bold" text="Qtd:" />
@@ -361,7 +247,7 @@
                                             <TextField fx:id="txtWidth" prefWidth="50.0" promptText="Largura" />
                                             <Label text="x" />
                                             <TextField fx:id="txtHeight" prefWidth="50.0" promptText="Altura" />
-                                 <Label alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="80.0" styleClass="label-bold" text="Und. Medida" />
+                                            <Label alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="80.0" styleClass="label-bold" text="Und. Medida" />
                                             <ComboBox fx:id="comboUnidade" prefWidth="90.0" promptText="Unidade">
                                                 <items>
                                                     <FXCollections fx:factory="observableArrayList">
@@ -376,8 +262,8 @@
                                                     <FontAwesomeIconView fill="WHITE" glyphName="REFRESH" size="14.0" />
                                                 </graphic>
                                             </Button>
-                              </children>
-                           </HBox>
+                                        </children>
+                                    </HBox>
 
                                     <Separator />
 
@@ -385,9 +271,10 @@
                                     <VBox spacing="10.0">
                                         <children>
                                             <Label styleClass="label-bold" text="Preview da Etiqueta">
-                                    <font>
-                                       <Font name="System Bold" size="12.0" />
-                                    </font></Label>
+                                                <font>
+                                                    <Font name="System Bold" size="12.0" />
+                                                </font>
+                                            </Label>
                                             <Pane prefHeight="400.0" prefWidth="748.0" styleClass="preview-container">
                                                 <children>
                                                     <Label fx:id="lblPreviewPlaceholder" alignment="CENTER" contentDisplay="CENTER" prefHeight="400.0" prefWidth="780.0" text="Selecione um template para visualizar" textAlignment="CENTER" textFill="#888888" wrapText="true" />
